--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations: #追加
+    sdk: flutter         #追加
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0          #追加
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +58,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true         #追加
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
